Fix path expression

--- a/example.config.yml
+++ b/example.config.yml
@@ -3,8 +3,8 @@ domainName: localhost
 portNumber: 8080
 
 # Server certificate chain and private key of domain name.
-certChain: /PATH/TO/YOUR/CERT/CHAIN
-certKey: /PATH/TO/YOUR/CERT/KEY
+certChain: /path/to/your/cert/chain
+certKey: /path/to/your/cert/key
 
 # Relative path for handling HTTP POST requests.
 messageRelativePath: /nc
@@ -13,10 +13,9 @@ messageRelativePath: /nc
 websocketRelativePath: /wc
 
 # Path to SQLite database file.
-databasePath: /tmp/data.db
+databasePath: /path/to/your/database/file
 
 
 # Pushbullet Token.
 pushbullet:
-  token: YOUR.PUSHBULLET.TOKEN
-
+  token: your.pushbullet.token
